# votann_core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: generate_votann_core.sh
src/: main.cpp
src/strategies/: bnh_strategy.hpp  strategy_interface.hpp
src/votann/: data_row.hpp  engine.cpp  engine.hpp  logger.hpp  portfolio.cpp  portfolio.hpp  risk_manager.hpp  strategy.hpp
tests/: votann_test.cpp
